[tool.poetry]
name = "eliud"
version = "0.1.0"
description = "Python Telegram bot Framework"
authors = ["Reinier Hernández <sasuke.reinier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.2"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"


[tool.poetry.group.tests.dependencies]
coverage = "^6.5.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
