[tool.poetry]
name = "eliud"
version = "0.1.0"
description = "Python Telegram bot Framework"
authors = ["Reinier Hernández <sasuke.reinier@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"
homepage = "https://github.com/ragnarok22/eliud"
repository = "https://github.com/ragnarok22/eliud"
keywords = [
    "Telegram",
    "Framework",
]
classifiers = [
    "Development Status :: 5 — Alpha",
    "Intended Audience :: Developers",
    "Operating System :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Windows",
    "License :: OSI Approved :: GNU GPLv3 License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.8"
asgiref = "^3.5.2"
pytz = "^2022.6"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"


[tool.poetry.group.tests.dependencies]
coverage = "^6.5.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
eliud = "eliud.core.management:execute_from_command_line"

[tool.poetry.urls]
issues = "https://github.com/ragnarok22/eliud/issues"
